Router /api/productos

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>HOLA MUNDO</h1>
     <form action="/api/productos" method="post">
-        Nombre:<input type="text" name="nombre">
-        Precio:<input type="number" name="precio">
-        Imagen:<input type="text" name="imagen">
+        Nombre:<input type="text" name="nombre"/>
+        Precio:<input type="number" name="precio"/>
+        Imagen:<input type="text" name="imagen"/>
         <button>Agregar</button>
     </form>
 </body>
